
	shakraw:
		* Merged with 2.0.3 latest fixes (r4630, r4631, r4633, r4639)
	
	stefanero:
		* Fixed cas,wxCas and xas infos for Kad when only connected to
		Kad
		* Imported amps in aMule source

	thedude0001:
		* Added CVS snapshot date to frame title.
		* Fixed #560: "aMuleWebDLG and aMuleCMDDLG do not report version"

	volpol:
		* A4AF transfer speed display fix

	Xaignar:
		* Fixed crash when '--version' was used, caused by an uninitialized
		  pointer. Serveral other uninitialized pointers were also fixed.
		* Fixed assert in the Type-To-Select code which would trigger when
		  items were removed and the old tts index pointed past the last item.
		* Fixed kad-searches with a filetype specified not producing any
		  results, caused by using obsolete type-strings.
		* Added missing calls to va_end at places where va_start is called.
		* Remove unneeded calls to wxMutexGuiEnter/Leave.
		* Fixed the listctrls asserting if one were to click past the end of
		  the last column header.
		* Fixed unhandled-exception handling in unittests, which had been
		  broken when they were made console apps.
		* Fixed sscanf call in PHP lexer, which had switched the source and
		  the format arguments.
		* Performed audit of printf type calls. Serveral bugs caused by using
		  the wrong printf variant were fixed in the webserver. All instances
		  of calls to sprintf variants were changed to snprintf to prevent
		  buffer overruns and calls to printf that passed a dynamic string as
		  the format string were changed to prevent using untrusted format
		  strings. Lastly a few places where widechar and char where mixed
		  were fixed.
		* Avoided checking the same folders multiple times when looking for
		  shared files, by ensuring that duplicate entries (from categories,
		  etc) are ignored.
		* Fixed minor mem-leak in CTimer.
		* Deleting a static server now also removes it from the static list.
		* Fixed disabling of graphs while the prefs-dialog is still open.